2010-09-21  Peter Rosin  <peda@lysator.liu.se>

	msvc: eliminate spaces in the library search path.
	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [mingw, cygwin]
	<cl*, sys_lib_search_path_spec>: The LIB path variable telling
	where MSVC looks for libraries is likely to contain directory
	names with spaces.  Convert those directory names to the short
	8.3 DOS form (i.e. without spaces) when storing them in
	sys_lib_search_path_spec, as that is a space separated variable.

2010-09-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Revert to per-language libpath computation on AIX.
	* libltdl/m4/libtool.m4 (_LT_SYS_MODULE_PATH_AIX): Accept
	tagname argument.  Use global cache variable lt_cv_aix_libpath
	to override per-language tag variables for the libpath value.
	Fix the sed script to remove trailing space.
	(_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG): Pass tag argument to
	_LT_SYS_MODULE_PATH_AIX.
	Tracked down and reported by Rainer Tammer.

2010-09-21  Gary V. Vaughan  <gary@gnu.org>

	maint: edit-readme-alpha shouldn't try to re-edit during dist.
	* libltdl/config/edit-readme-alpha: If README is non-writable
	assume that it is being run from distcheck, and skip the edit
	with a warning (to help diagnose cases where the heuristic is
	not correct).  However, if README has already been edited to
	the alpha text, quietly skip without an error message.

2010-09-20  Eric Blake  <eblake@redhat.com>

	maint: drop autobuild requirement
	* HACKING: Update.

	build: ship autobuild.m4, to reduce bootstrap requirement
	* libltdl/m4/.gitignore: Drop autobuild.m4.
	* libltdl/m4/autobuild.m4: New file, copied from autobuild.
	* configure.ac (AB_INIT): Unconditionally call it.

2010-09-20  Peter Rosin  <peda@lysator.liu.se>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	libltdl: Make sure preloaded symbols are declared extern "C".
	* libltdl/ltdl.h (LTDL_SET_PRELOADED_SYMBOLS): Move the
	declaration of lt__PROGRAM__LTX_preloaded_symbols to global